<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/noteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#E8EAF6"
            android:hint="@string/hint_title"
            android:padding="10dp"
            android:textAppearance="?android:textAppearanceLarge"/>

        <EditText
            android:id="@+id/noteDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/noteCreateDate"
            android:layout_below="@id/noteTitle"
            android:background="#E8EAF6"
            android:gravity="top"
            android:hint="@string/hint_detail"
            android:padding="10dp"
            android:textAppearance="?android:textAppearanceLarge"/>

        <TextView
            android:id="@+id/noteCreateDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/noteUpdateDate"
            android:layout_marginTop="5dp"
            android:gravity="right"/>

        <TextView
            android:id="@+id/noteUpdateDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="right"/>

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/noteDeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginLeft="88dp"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:src="@mipmap/ic_delete_forever_white_24dp"
        android:visibility="visible"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/noteRegistButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/fab_margin"
        android:src="@mipmap/ic_done_white_24dp"
        app:backgroundTint="@color/colorPrimaryDark"/>


</android.support.design.widget.CoordinatorLayout>
