...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/notesFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/hint_filter"
            android:lines="1"
            android:textAppearance="?android:textAppearanceLarge"/>
...
            android:text="@string/message_no_note"
            android:textSize="30dp"
            android:visibility="gone"/>
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/notesCreateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/fab_margin"
        android:src="@mipmap/ic_add_white_24dp"
        app:backgroundTint="@color/colorPrimaryDark"/>
...
