<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/listItem"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/listItemTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:textAppearanceLarge"/>

    <TextView
        android:id="@+id/listItemDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/listItemTitle"
        android:lines="3"/>

    <TextView
        android:id="@+id/listItemDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/listItemTitle"
        android:layout_below="@+id/listItemDetail"/>

</RelativeLayout>